Fix scrollbar issues related to 100vw

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,15 +1,18 @@
 .Footer {
-  display: flex;
-  flex-wrap: wrap;
   min-height: 200px;
-  margin: 0 calc((100vw - 100%) / -2);
-  padding: calc(var(--size-base) * 4) calc((100vw - 100%) / 2);
+  padding: calc(var(--size-base) * 4) 0;
   color: #fff;
   background-color: #333;
 }
 
+.Footer__inner {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
 .Footer__Item {
-  width: calc(var(--size-base) * 40);
+  width: 50%;
   padding: 0 16px;
 }
 
